@@ -1,14 +1,14 @@
 from ftw.builder.testing import BUILDER_LAYER
 from ftw.builder.testing import functional_session_factory
 from ftw.builder.testing import set_builder_session_factory
+from plone.app.testing import applyProfile, PLONE_FIXTURE
 from plone.app.testing import FunctionalTesting
-from plone.app.testing import PLONE_FIXTURE
 from plone.app.testing import PloneSandboxLayer
-from plone.app.testing import applyProfile
+from plone.testing.z2 import installProduct
+from plone.testing.z2 import ZSERVER_FIXTURE
 from zope.configuration import xmlconfig
 import logging
 import sys
-
 
 handler = logging.StreamHandler(sys.stderr)
 logging.root.addHandler(handler)
@@ -16,13 +16,18 @@ logging.root.addHandler(handler)
 
 class ZCMLLayer(PloneSandboxLayer):
 
-    defaultBases = (PLONE_FIXTURE, )
+    defaultBases = (PLONE_FIXTURE, ZSERVER_FIXTURE,)
 
     def setUpZope(self, app, configurationContext):
-        import ftw.globalstatusmessage
-        xmlconfig.file('configure.zcml',
-                       ftw.globalstatusmessage,
-                       context=configurationContext)
+        xmlconfig.string(
+            '<configure xmlns="http://namespaces.zope.org/zope">'
+            '  <include package="z3c.autoinclude" file="meta.zcml" />'
+            '  <includePlugins package="plone" />'
+            '  <includePluginsOverrides package="plone" />'
+            '</configure>',
+            context=configurationContext)
+
+        installProduct(app, 'ftw.globalstatusmessage')
 
 STATUSMESSAGE_ZCML_LAYER = ZCMLLayer()
 STATUSMESSAGE_ZCML_FUNCTIONAL = FunctionalTesting(
