@@ -5,7 +5,8 @@ Changelog
 1.5.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- New feature allows to send the global status message config to a
+ `ftw.publisher.receiver` instance. [mbaechtold, jone]
 
 
 1.5.0 (2017-02-17)
